--- a/course/static/course/list.css
+++ b/course/static/course/list.css
@@ -82,4 +82,4 @@ body .content .courses a .course-container .tutor-name {
   padding: 0 0 0 6%;
   margin: 0;
 }
-/*# sourceMappingURL=list_base.css.map */
+/*# sourceMappingURL=list.css.map */
