--- a/course/static/course/detail.scss
+++ b/course/static/course/detail.scss
@@ -90,10 +90,6 @@
   }
   .detail {
     margin: 20px 40px 20px 40px;
-    // font-family: "Dosis", sans-serif;
-    // display: flex;
-    // flex-flow: row;
-    // justify-content: space-between;
     font-weight: 300;
     font-size: 13px;
     align-items: center;
@@ -108,6 +104,38 @@
         color: rgb(70, 70, 70);
         font-size: 18px;
         margin-left: 10px;
+      }
+    }
+  }
+  .specilized-action {
+    font-family: "Noto Sans JP", sans-serif;
+    margin: 40px;
+    .btn {
+      display: flex;
+      flex-flow: row;
+      justify-content: center;
+      align-items: center;
+      align-items: center;
+      height: 55px;
+      width: 120px;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+      font-weight: 500;
+      font-size: 16px;
+      background-color: #4c2fc9;
+      cursor: pointer;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        box-shadow: 0 7px 15px rgba(110, 110, 110, 0.7);
+      }
+      &#delete {
+        background-color: rgb(248, 59, 59);
+      }
+      i {
+        font-size: 18px;
+        padding: 0 5px 0 0;
       }
     }
   }
