--- a/assignment/static/assignment/submission.scss
+++ b/assignment/static/assignment/submission.scss
@@ -7,42 +7,10 @@
   margin-bottom: 10vh;
   .header {
     padding: 30px;
-    display: flex;
-    flex-flow: row;
-    justify-content: space-between;
-    align-items: center;
     h1 {
       margin: 0;
       font-weight: 400;
       font-size: 35px;
-    }
-    a {
-      text-decoration: none;
-    }
-    .btn {
-      i {
-        font-size: 15px;
-        padding: 5px 5px 5px 0;
-      }
-      display: flex;
-      flex-flow: row;
-      justify-content: center;
-      align-items: center;
-      border: none;
-      border-radius: 5px;
-      background-color: rgb(97, 190, 97);
-      color: rgb(255, 255, 255);
-      height: 40px;
-      width: 130px;
-      margin: 10px;
-      font-family: "Noto Sans JP", sans-serif;
-      font-weight: 500;
-      font-size: 14px;
-      cursor: pointer;
-      transition: all 250ms ease-in-out;
-      &:hover {
-        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-      }
     }
   }
   .list {
@@ -50,10 +18,55 @@
     display: flex;
     justify-content: stretch;
     flex-flow: column;
+    .sub-list {
+      display: flex;
+      flex-flow: row;
+      align-items: center;
+      justify-content: space-between;
+      margin: 0 10px 0 10px;
+      .description {
+        font-size: 14px;
+        &.clip {
+          //   white-space: nowrap;
+          //   word-wrap: nowrap;
+          white-space: nowrap;
+          width: 55vw;
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
+      }
+      a {
+        display: flex;
+        flex-flow: row;
+        justify-content: left;
+        align-items: center;
+        border: none;
+        border-radius: 5px;
+        // background-color: #4c2fc9;
+        // color: white;
+        // height: 30px;
+        width: 100px;
+        margin-right: 50px;
+        font-family: "Noto Sans JP", sans-serif;
+        font-weight: 500;
+        font-size: 13px;
+        cursor: pointer;
+        transition: all 250ms ease-in-out;
+        &.dead-link {
+          cursor: default;
+          color: grey;
+        }
+      }
+    }
     .description {
       margin: 10px;
       font-size: 13px;
       color: grey;
+      &.cilp {
+        text-overflow: clip;
+        // word-wrap: nowrap;
+        white-space: nowrap;
+      }
     }
     a {
       text-decoration: none;
