--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -35,7 +35,7 @@
   <div class='detail'>
     <div class='description'>
       <p class='heading' >About this course :</p>
-      <p class='description-content'>{{ object.description|capfirst }}</p>
+      <p class='detail-content'>{{ object.description|capfirst }}</p>
     </div>
   </div>
   {% if is_tutor %}
