--- a/course/templates/course/tutor_actions.html
+++ b/course/templates/course/tutor_actions.html
@@ -7,7 +7,7 @@
         </a>
         <a href="assignments/create" title = 'Create assignments'>
             <i class='material-icons'>
-                playlist_add
+                post_add
             </i>
             <p>Create assignments</p>
         </a>
