--- a/authentication/templates/authentication/signup.html
+++ b/authentication/templates/authentication/signup.html
@@ -1,12 +1,12 @@
-{% extends 'authentication/base.html' %}
+{% extends 'ui_components/form_template_1.html' %}
 {% load static %}
 
     {% block title %}
-      <title>Nebula Signup</title>
+      Signup
     {% endblock title %}
     
     {% block heading %}
-      <h1>SIGN UP</h1>
+      SIGN UP
     {% endblock heading %}
     
     {% block navbar-items %}
@@ -15,21 +15,6 @@
     
     {% block form %}
       {% csrf_token %}
-        {{form.first_name.label_tag}}
-        {{form.first_name.errors}}
-        {{form.first_name}}
-        {{form.last_name.errors}}
-        {{form.last_name.label_tag}}
-        {{ form.last_name }}
-        {{form.email.label_tag}}
-        {{form.email.errors}}
-        {{ form.email }}
-        {{form.password1.label_tag}}
-        {{form.password1.errors}}
-        {{ form.password1 }}
-        {{form.password2.label_tag}}
-        {{form.password2.errors}}
-        {{ form.password2 }}
-      
+      {{ form }}
       <input type="submit" value='SIGN UP' />
     {% endblock form %}  
