--- a/ui_components/templates/ui_components/base.html
+++ b/ui_components/templates/ui_components/base.html
@@ -14,8 +14,11 @@
     {% block static %}
     {% endblock static %}
     
-    {% block title %}
-    {% endblock title %}
+    <title>
+      Nebula |
+      {% block title %}
+      {% endblock title %}
+    </title>
 </head>
 <body>
     <div class="navbar">
