--- a/assignment/templates/assignment/create.html
+++ b/assignment/templates/assignment/create.html
@@ -1,29 +1,16 @@
-{% extends 'ui_components/base.html' %}
+{% extends 'ui_components/form_template_1.html' %}
 {% load static %}
 
 {% block title %}
-  <title>Create assignment</title>
+  Create assignment
 {% endblock title %}
 
-{% block static %}
-  <link rel="stylesheet" href="{% static 'ui_components/form_template_1.css' %}">
-  <script src="{% static 'assignment/create.js' %}"></script>
-{% endblock static %}
+{% block heading %}
+  Create assignment
+{% endblock heading %}
 
-{% block body %}
-  <h1>Create assignment</h1>
-  <form method='POST'>
+{% block form %}
     {% csrf_token %}
-    {{ form.non_field_errors }}
-    {{ form.name.label_tag }}
-    {{ form.name.errors }}
-    {{ form.name }}
-    {{ form.description.label_tag }}
-    {{ form.description.errors }}
-    {{ form.description }}
-    {{ form.deadline.label_tag }}
-    {{ form.deadline.errors }}
-    {{ form.deadline }}
+    {{ form }}
     <input type="submit" value="Create">
-  </form>
-{% endblock body%}
+{% endblock form%}
