--- a/assignment/templates/assignment/upload_solution.html
+++ b/assignment/templates/assignment/upload_solution.html
@@ -1,19 +1,20 @@
-{% extends 'ui_components/base.html' %}
-
+{% extends 'ui_components/form_template_1.html' %}
 {% load static %}
 
-{% block static %}
-  <link rel="stylesheet" href="{% static 'ui_components/form_template_1.css' %}">
-{% endblock static %}
-
 {% block title %}
-  <title>Nebula | Submit assignment</title>
+  Submit assignment
 {% endblock title %}
 
+{% block heading %}
+  Submit assignment
+{% endblock heading %}
 
-{% block body %}
-  <h1>Submit assignment</h1>
-  <form method='POST' enctype='multipart/form-data'>
+
+{% block form_enctype %}
+  enctype='multipart/form-data'
+{% endblock form_enctype  %}
+
+{% block form %}
     {% csrf_token %}
     {{ formset.management_form }}
     {% for form in formset %}
@@ -26,5 +27,4 @@
     <div class='hr' ></div>
   {% endfor %}
     <input type="submit" value='Submit'>
-  </form>
-{% endblock body %}
+{% endblock form %}
