--- a/course/templates/course/create.html
+++ b/course/templates/course/create.html
@@ -1,29 +1,31 @@
-{% extends 'ui_components/base.html' %}
+{% extends 'ui_components/form_template_1.html' %}
 {% load static %}
 
 {% block title %}
-  <title>Create course</title>
+  Create course
 {% endblock title %}
 
-{% block static %}
-  <link rel='stylesheet' href="{% static 'ui_components/form_template_1.css' %}" >
-{% endblock static %}
+{% block heading %}
+  Create course
+{% endblock heading %}
 
-{% block body %}
-  <h1>Create course</h1>
-  <form method='POST' enctype='multipart/form-data' >
-    {% csrf_token %}
-    {{ form.non_field_errors }}
-    {{ form.name.label_tag }}
-    {{ form.name.errors }}
-    {{ form.name }}
-    {{ form.description.label_tag }}
-    {{ form.description.errors }}
-    {{ form.description }}
-    {{ form.image.label_tag }}
-    {{ form.image.errors }}
-    <label for="id_image" class='file'><p>Choose image</p></label>
-    {{ form.image }}
-    <input type="submit" value="Create">
-  </form>
-{% endblock body %}
+
+{% block form_enctype %}
+  enctype='multipart/form-data'
+{% endblock form_enctype %}
+
+{% block form %}
+  {% csrf_token %}
+  {{ form.non_field_errors }}
+  {{ form.name.label_tag }}
+  {{ form.name.errors }}
+  {{ form.name }}
+  {{ form.description.label_tag }}
+  {{ form.description.errors }}
+  {{ form.description }}
+  {{ form.image.label_tag }}
+  {{ form.image.errors }}
+  <label for="id_image" class='file'><p>Choose image</p></label>
+  {{ form.image }}
+  <input type="submit" value="Create">
+{% endblock form %}
