--- a/ui_components/static/ui_components/detail_template_1.css
+++ b/ui_components/static/ui_components/detail_template_1.css
@@ -3,7 +3,6 @@
   -webkit-box-shadow: 0 4px 15px rgba(110, 110, 110, 0.2);
           box-shadow: 0 4px 15px rgba(110, 110, 110, 0.2);
   font-family: "Noto Sans JP", sans-serif;
-  padding-bottom: 50px;
   margin-top: 10vh;
   margin-bottom: 10vh;
 }
@@ -25,40 +24,40 @@
   padding: 40px 40px 40px 30px;
 }
 
-.content .header .course-info h1 {
+.content .header .info .heading {
   grid-area: heading;
   margin: 0;
   font-weight: 400;
   font-size: 35px;
 }
 
-.content .header .course-info .tutor-info {
+.content .header .info .sub-info {
   grid-area: tutor-info;
   margin-top: 20px;
   font-weight: 300;
 }
 
-.content .header .course-info .tutor-info p {
+.content .header .info .sub-info p {
   margin: 5px 0 5px 0;
   font-size: 13px;
 }
 
-.content .header .course-info .hr {
+.content .header .info .hr {
   width: 100%;
   height: 0;
   border: 0.5px inset #adadad;
 }
 
-.content .header .course-info .hr.upper {
+.content .header .info .hr.upper {
   margin-top: 30px;
   margin-bottom: 10px;
 }
 
-.content .header .course-info .hr.lower {
+.content .header .info .hr.lower {
   margin-top: 10px;
 }
 
-.content .header .course-info .actions {
+.content .header .info .actions {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -76,7 +75,7 @@
           align-items: flex-start;
 }
 
-.content .header .course-info .actions a {
+.content .header .info .actions a {
   width: 40%;
   text-decoration: none;
   margin: 0 5px 0 0;
@@ -97,13 +96,13 @@
   color: black;
 }
 
-.content .header .course-info .actions a p {
+.content .header .info .actions a p {
   margin-left: 15px;
   font-weight: 400;
   font-size: 14px;
 }
 
-.content .header .course-info .actions a i {
+.content .header .info .actions a i {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -121,16 +120,19 @@
   width: 200px;
   right: 120;
   margin-right: 10%;
-  background-color: red;
   border-radius: 50%;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+}
+
+.content .header .image img {
   -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 50%;
+  height: 100%;
+  width: 100%;
 }
 
 .content .detail {
-  margin: 20px 40px 20px 40px;
+  margin: 20px 60px 50px 40px;
   font-weight: 300;
   font-size: 13px;
   -webkit-box-align: center;
@@ -138,29 +140,35 @@
           align-items: center;
 }
 
-.content .detail div {
-  margin-bottom: 50px;
-}
-
-.content .detail div .heading {
+.content .detail .detail-heading {
   margin-top: 0;
   font-weight: 300;
   font-size: 30px;
   color: #464646;
 }
 
-.content .detail div .detail-content {
+.content .detail .detail-content {
   color: #464646;
   font-size: 18px;
   margin-left: 10px;
 }
 
-.content .specilized-action {
-  font-family: "Noto Sans JP", sans-serif;
-  margin: 40px;
+.content .detail.secondary {
+  margin-left: 60px;
 }
 
-.content .specilized-action .btn {
+.content .detail.secondary .detail-heading {
+  font-size: 25px;
+}
+
+.content .detail.secondary .detail-content {
+  font-size: 17px;
+}
+
+.content .btn-primary {
+  font-family: "Noto Sans JP", sans-serif;
+  margin: 40px;
+  margin-bottom: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -190,17 +198,17 @@
   transition: all 250ms ease-in-out;
 }
 
-.content .specilized-action .btn:hover {
+.content .btn-primary:hover {
   -webkit-box-shadow: 0 7px 15px rgba(110, 110, 110, 0.7);
           box-shadow: 0 7px 15px rgba(110, 110, 110, 0.7);
 }
 
-.content .specilized-action .btn#delete {
+.content .btn-primary#delete {
   background-color: #f83b3b;
 }
 
-.content .specilized-action .btn i {
+.content .btn-primary i {
   font-size: 18px;
   padding: 0 5px 0 0;
 }
-/*# sourceMappingURL=detail.css.map */
+/*# sourceMappingURL=detail_template_1.css.map */
