--- a/ui_components/static/ui_components/detail_template_1.scss
+++ b/ui_components/static/ui_components/detail_template_1.scss
@@ -2,7 +2,6 @@
   background-color: white;
   box-shadow: 0 4px 15px rgba(110, 110, 110, 0.2);
   font-family: "Noto Sans JP", sans-serif;
-  padding-bottom: 50px;
   margin-top: 10vh;
   margin-bottom: 10vh;
   .header {
@@ -11,19 +10,17 @@
     justify-content: space-between;
     align-items: top;
     padding: 40px 40px 40px 30px;
-    .course-info {
-      h1 {
+    .info {
+      .heading {
         grid-area: heading;
         margin: 0;
         font-weight: 400;
         font-size: 35px;
       }
-      .tutor-info {
+      .sub-info {
         grid-area: tutor-info;
         margin-top: 20px;
-        // font-family: "Dosis", sans-serif;
         font-weight: 300;
-        //   color: rgb(46, 46, 46);
         p {
           margin: 5px 0 5px 0;
           font-size: 13px;
@@ -81,63 +78,71 @@
       width: 200px;
       right: 120;
       margin-right: 10%;
-      background-color: red;
       border-radius: 50%;
-      background-repeat: no-repeat;
-      background-size: 100% 100%;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+      img {
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+        border-radius: 50%;
+        height: 100%;
+        width: 100%;
+      }
     }
   }
   .detail {
-    margin: 20px 40px 20px 40px;
+    margin: 20px 60px 50px 40px;
     font-weight: 300;
     font-size: 13px;
     align-items: center;
-    div {
-      margin-bottom: 50px;
-      .heading {
-        margin-top: 0;
-        font-weight: 300;
-        font-size: 30px;
-        color: rgb(70, 70, 70);
+    .detail-heading {
+      margin-top: 0;
+      font-weight: 300;
+      font-size: 30px;
+      color: rgb(70, 70, 70);
+    }
+    .detail-content {
+      color: rgb(70, 70, 70);
+      font-size: 18px;
+      margin-left: 10px;
+    }
+    &.secondary {
+      margin-left: 60px;
+      .detail-heading {
+        font-size: 25px;
       }
       .detail-content {
-        color: rgb(70, 70, 70);
-        font-size: 18px;
-        margin-left: 10px;
+        font-size: 17px;
       }
     }
   }
-  .specilized-action {
+
+  .btn-primary {
     font-family: "Noto Sans JP", sans-serif;
     margin: 40px;
-    .btn {
-      display: flex;
-      flex-flow: row;
-      justify-content: center;
-      align-items: center;
-      align-items: center;
-      height: 55px;
-      width: 120px;
-      border: none;
-      border-radius: 5px;
-      color: white;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-      font-weight: 500;
-      font-size: 16px;
-      background-color: #4c2fc9;
-      cursor: pointer;
-      transition: all 250ms ease-in-out;
-      &:hover {
-        box-shadow: 0 7px 15px rgba(110, 110, 110, 0.7);
-      }
-      &#delete {
-        background-color: rgb(248, 59, 59);
-      }
-      i {
-        font-size: 18px;
-        padding: 0 5px 0 0;
-      }
+    margin-bottom: 80px;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    align-items: center;
+    height: 55px;
+    width: 120px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    font-weight: 500;
+    font-size: 16px;
+    background-color: #4c2fc9;
+    cursor: pointer;
+    transition: all 250ms ease-in-out;
+    &:hover {
+      box-shadow: 0 7px 15px rgba(110, 110, 110, 0.7);
+    }
+    &#delete {
+      background-color: rgb(248, 59, 59);
+    }
+    i {
+      font-size: 18px;
+      padding: 0 5px 0 0;
     }
   }
 }
