--- a/assignment/static/assignment/list.css
+++ b/assignment/static/assignment/list.css
@@ -25,17 +25,17 @@
           align-items: center;
 }
 
-.content .header h1 {
+.content .header .heading {
   margin: 0;
   font-weight: 400;
   font-size: 35px;
 }
 
-.content .header a {
+.content .header .actions a {
   text-decoration: none;
 }
 
-.content .header .btn {
+.content .header .actions .btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -64,12 +64,12 @@
   transition: all 250ms ease-in-out;
 }
 
-.content .header .btn i {
+.content .header .actions .btn i {
   font-size: 15px;
   padding: 5px 5px 5px 0;
 }
 
-.content .header .btn:hover {
+.content .header .actions .btn:hover {
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
           box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
